Data import changed to Buffered Reader added MergesortPlatformThreads